--- a/index.html
+++ b/index.html
@@ -19,22 +19,25 @@
     <main>
         <div class="products">
             <div class="product-item" data-id="1">
-                <img src="img/nout.jpg">
+                <img src="img/nout.jpg" alt="noutb">
                 <h3>Notebook</h3>
                 <p>2000</p>
                 <button class="buy-btn">Купить</button>
-                <div class="product-item" data-id="1">
-                    <img src="img/nout.jpg">
-                    <h3>Notebook</h3>
-                    <p>2000</p>
-                    <button class="buy-btn">Купить</button>
-                    <div class="product-item" data-id="1">
-                        <img src="img/nout.jpg">
-                        <h3>Notebook</h3>
-                        <p>2000</p>
-                        <button class="buy-btn">Купить</button>
+            </div>
+            <div class="product-item" data-id="1">
+                <img src="img/nout.jpg" alt="nouts">
+                <h3>Notebook</h3>
+                <p>2000</p>
+                <button class="buy-btn">Купить</button>
+            </div>
+            <div class="product-item" data-id="1">
+                <img src="img/nout.jpg" alt="nout">
+                <h3>Notebook</h3>
+                <p>2000</p>
+                <button class="buy-btn">Купить</button>
 
-                    </div>
+            </div>
+        </div>
     </main>
     <!--befoestart-->
     <p>
